# python-generators-in-testing

./: .gitignore  fastapi_generator_demo.py  main.py  pyproject.toml  test_websocket.py
_old/: conftest.py  test_browser_switching.py  test_true_headless.py  test_webtables.py
static/css/: styles.css
static/js/: app.js  app_fresh.js
templates/: index.html
